# learning

./: .gitignore  Git commands mustknow.desktop  README.md  dummy.html  mysript.sh  pushfail.sh
C-C#-C++/C/: graphEdges.c  pshDownStack.c  queuelinkdlst.c
C-C#-C++/C#/: calculator.cs
C-C#-C++/C#/project_tutorial/: tutorial.cs
C-C#-C++/C/linkedLists/: linked_list.c
C-C#-C++/C/ordenação/: a.out  general_sort.h  general_sort.h.gch  main.c  mergesort.c  mergesort.h.gch  quicksort.c  quicksort.h
C-C#-C++/C/recursive/: main.c
C-C#-C++/C/stacks/: linkedliststack.c  stackofchars.c
C-C#-C++/CPP/: calling.cpp  cubes.cpp  exception.cpp  strquote.cpp
C-C#-C++/CPP/OOP/: sales_item.cpp  screen.hpp.gch
C-C#-C++/CPP/adventures-in-functions/: 6-11.cpp  (+2 more)
C-C#-C++/elementarr_data_struc/: ex1.c
FORTRAN/: matrix  matrix.f90
IA/: apriori.py  clusters.py  knn.py  randomforest.py
IA/IA_venv/: pyvenv.cfg
OPENCV/: CMakeLists.txt
OPENCV/include/: learning.hpp
OPENCV/src/: learning.cpp  main.cpp
Operating Systems/: a.out  copy.c
PROJECTS/: dummy.html
XML/: first.xml  instructions.txt
cmake/the_basics/: CMakeLists.txt
codefr/: .gitignore
codefr/control/: discretesimulationswithanimations.py  realTimeAnimation.py  realTimePlotting.py  realtimeplotanimation.py  teste.py
codefr/fiscomp/: .adaptativeCometaryOrbits.py.swp  .cometaryOrbits.py.swp  Computational Physics – Programs and data.html  NLPanimation.py  adaptativeCometaryOrbits.py  cometaryOrbits.py  dft.py  drivenPendulum.py  fourierSimpFunc.py  harmAndAnarm.py  laplace.py  lorentz.py  lotka-volterra.py  lowPass.py  nonLinearPendulum.py  odesim.py  overInfinity.py  rk2.py  rk4.py  spaceGarbage.py  sunspot.py  tempLightBulb.py  trumpetnpiano.py  vanDerPol.py  vibrationEDO.py
codefr/html css js/: index.html  mypage.html  tips.txt
codefr/networks/: http_interacting.py  sendingEmail.py
codefr/pyt/: adminClass.py  dogClass.py  iceCreamStand.py  matchcase.py  nstdlistfltng.py  pipelineProcessor.py  runoff.py  sendmsg.py
collapsed/: .cometaryOrbits.py.swo  .simple.ko.cmd  .simple.mod.o.cmd  .simple.o.cmd  .~lock.Dados de Teste.xlsx#  collapse.sh
cpp/FUN/: boids.cpp
cpp/FUN/black_hole/: CMakeLists.txt  CPU-geodesic.cpp  README.md  geodesic.comp  grid.vert  ray_tracing.cpp
cpp/FUN/black_hole/vs_code/: c_cpp_properties.json
cpp/IOLib/: main.cpp
cpp/adventures-in-functions/: 6-26
cpp/branch-and-logic/: cinfish.cpp  outfile.cpp
cpp/sfml/: .gitignore
cpp/sfml/tutorial/: CMakeLists.txt  run.sh
cpp/sfml/tutorial/base/: CMakeLists.txt  configure.sh
cpp/sfml/tutorial/base/src/: main.cpp
cpp/sfml/tutorial/example_1/src/: main.cpp
cpp/sfml/tutorial/example_3/src/: main.cpp
cpp/sfml/tutorial/example_4/src/: main.cpp
cpp/sfml/tutorial/example_5/: run.sh
cpp/sfml/tutorial/example_5/src/: main.cpp
cpp/sfml/tutorial/example_6/src/: main.cpp
cpp/sfml/tutorial/src/: main.cpp
julia-programming/: agent_based_model.jl  factorial.jl
latex/: curriculo1.tex  tutorial.sublime-workspace
missing semester/: debugging.txt
missing semester/debugging/: bubble.py  debugging.txt  fib.sh  main.cprof  sorts.prof  sorts.py
missing semester/metaprogramming/: Makefile  plot.py
network/: client.py  server.py  simple_server.py
nextjs/: .gitignore
nextjs/hello-world/: package-lock.json  package.json
nextjs/routing-demo/: package-lock.json  package.json
nodejs/: .gitignore  mat.js  nome.js  package-lock.json  package.json
nodejs/blogapp/: app.js  package-lock.json  package.json
nodejs/calc/: calc.js  div.js  multi.js  soma.js  sub.js
nodejs/http/: app.js  jsconfig.json  package-lock.json  package.json
nodejs/mongodb/: aprendendo.js  instructions.txt  test_mongo.js
nodejs/servidor/: index.js  teste.js
not python/C-C#-C++/: a.out  randtest.c
not python/C-C#-C++/CPP/GENERIC-ALGORITHMS/: CMakeLists.txt  main.cpp
not python/C-C#-C++/CPP/GENERIC-ALGORITHMS/include/: test.hpp
not python/C-C#-C++/CPP/GENERIC-ALGORITHMS/src/: aside.cpp  main.cpp
not python/C-C#-C++/CPP/GRAPHICS/: CMakeLists.txt  arm  bounce  comet  cube  fish  moon  myprogram  spinsquare  tetraedron  texture  torus
not python/C-CS-CPP/C/algorithms1/: CMakeLists.txt  output.txt
not python/C-CS-CPP/C/algorithms1/src/: aside.c  hashing.c  linked_list.c  main.c
not python/C-CS-CPP/CPP/List-Application/: CMakeLists.txt
not python/C-CS-CPP/CPP/List-Application/include/: MainFrame.hpp
not python/algorithms/: divnconqMult.txt  sieveEratosthenes.c
not python/shell-scripting/: 2myscript.sh  4myscript.sh  myscript.sh
not_python/C-CS-CPP/C/NEURONS/: CMakeLists.txt
not_python/C-CS-CPP/C/Network/: CMakeLists.txt  smtp_send  web_get
not_python/C-CS-CPP/C/Network/src/: smtp_send.c  sock_init.c  time_console.c  unix_list.c
not_python/C-CS-CPP/C/graphs/: CMakeLists.txt
not_python/C-CS-CPP/C/graphs/src/: graphs.c
not_python/GEMA/: cavernoso.cpp  efe_ene.cpp  logic.cpp  o_urso_mais_pesado.cpp  such_money.cpp
not_python/HTML-CSS/: teste.html
not_python/Java/: Principal.java
not_python/algorithms/: classicEuclids  classicEuclids.c  fstnode.c
not_python/shell-scripting/: 10myscript.sh  11myscript.sh  3myscript.sh  5myscript.sh  6myscript.sh  7myscript.sh  8myscript.sh  9myscript.sh  atscript.sh  find_errors.txt  find_results.txt
python/: dicas.txt  font-check.py
python/flask/: .gitignore
python/matplotlib/: mpl_demo.py
python/numpy/: dtype.py  main.py  multidimensional_array.py  reshape.py
react/: .gitignore
react/digital-clock/: index.html  package-lock.json  package.json
react/react/: .gitignore
react/to-do-list/: index.html
react/update-array-objects/: package.json
react/update-object/: index.html  package.json
react/updater-functions/: index.html  package.json
react/use-context/: package.json
react/use-effect/: index.html  package.json
react/width-height/: package-lock.json
recipes/: buttercream.txt  chocolate-cake.txt  strawberry-filling.txt
threads/: mutex.cpp  programa.tex  programa.txt  thread
unit_testing/assert_lib/: test
unit_testing/gtest_tu/: account.cpp  accountTest.cpp
(+744 files in other folders)
